# XinChao-Cut

./: .env.example  .env.production  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  setup.bat  start-backend.bat  start.bat  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: .env.example  .gitignore  README.md  funasr_worker_entry.py  pytest.ini  requirements-audio.txt  requirements-caption.txt  requirements-core.txt  requirements-dev.txt  requirements-funasr.txt  requirements-tts.txt  requirements.txt  run-backend.bat  setup.bat  setup.ps1  tts_worker_entry.py  whisper_worker_entry.py
backend/app/: config.py  ffmpeg_utils.py  gpu_guard.py  llm_call.py  main.py  process_runner.py  process_watchdog.py  resource_coordinator.py  single_instance.py  tts_worker.py  utils.py
backend/scripts/: compare_export_parity.py  disk_report.py  prefetch_models.py
backend/tests/: test_ai_config.py  test_ass.py  (+45 more)
docs/: 01-system-design.md  02-ui-design.md  03-folder-structure.md  04-clean-code.md  05-performance-optimization.md  INSTALLATION.md  USAGE.md
scripts/: stage-backend.ps1  subset-caption-fonts.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/backend-bundle/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make-icons.mjs
src-tauri/src/: lib.rs  main.rs
(+316 files in other folders)
