[package]
name = "xinchao-cut"
version = "0.1.4"
description = "XinChao-Cut desktop shell"
edition = "2021"

[lib]
name = "xinchao_cut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset enables the asset:// protocol the app uses to stream original
# media files straight from disk (path-backed assets — no OPFS copy).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
